@@ -1,0 +1,36 @@
+1.0.9 - 1.0.10
+
+DROP VIEW PRINT_PAWNING;
+
+CREATE VIEW PRINT_PAWNING(
+  PAWNID,
+  PAWNTICKET,
+  LOANDATE,
+  MATUDATE,
+  EXPIRYDATE,
+  ITEMTYPE,
+  PAWNER,
+  FULLADDRESS,
+  PRINCIPAL,
+  APPRAISAL,
+  INTEREST,
+  ADVINT,
+  SERVICECHARGE,
+  NETAMOUNT,
+  DESCRIPTION,
+  CONTACTNUMBER,
+  ORNUM,
+  ORDATE,
+  PENALTY,
+  RENEWDUE,
+  REDEEMDUE)
+AS
+SELECT 
+	P.PAWNID, P.PAWNTICKET, P.LOANDATE, P.MATUDATE, P.EXPIRYDATE, P.ITEMTYPE,
+    C.FIRSTNAME || ' ' || C.LASTNAME AS PAWNER, 
+    C.ADDR_STREET || ' ' || C.ADDR_BRGY || ' ' || C.ADDR_CITY AS FULLADDRESS,
+    P.PRINCIPAL, P.APPRAISAL, P.INTEREST, P.ADVINT, P.SERVICECHARGE,
+    P.NETAMOUNT, P.DESCRIPTION, C.PHONE1 AS CONTACTNUMBER,
+    P.ORNUM, P.ORDATE, P.PENALTY, P.RENEWDUE, P.REDEEMDUE
+FROM TBLPAWN P
+INNER JOIN TBLCLIENT C ON C.CLIENTID = P.CLIENTID;
